summative.moria.Moria.scala.code
/* tant que aps sur vert
Si facemur -> avance jusqua case verte
Si porte biscuit: si sur biscuit recule , posebiscuit, retourne
 									sinon avance
Sinon si surbiscuit -> prend biscuit,retourne
			sion avance()
      */



retourne()
while (getCouleurSol()!=Color.GREEN) {
  if (porteBiscuit()){
    	if (estSurBiscuit()){
        recule();poseBiscuit();retourne();avance()
      } else {
        avance()
      }
  }else {
    if (estSurBiscuit()){
      prendBiscuit();retourne()
    } else {
      avance()
    }
    if (estFaceMur()) {
    droite();avance();droite();avance()
  }
}